fix: mips出现无图标问题
和控制中心名称冲突，导致索引不到插件图标

Log: unionID登录后,帐号信息页未显示用户中心跳转入口图标与退出图标
Bug: https://pms.uniontech.com/bug-view-118341.html
Change-Id: I5ac9f9379636ae9ed01f1a6c43b8c079c9454ba8

--- a/dcc-deepinid-plugin/CMakeLists.txt
+++ b/dcc-deepinid-plugin/CMakeLists.txt
@@ -16,7 +16,11 @@ file(GLOB_RECURSE SRCS
     "*.h"
     "*.cpp"
     "*.qrc"
+    "*.svg"
 )
+
+# 指定所有qrc文件
+set(QRCS icons/deepinid.qrc)
 
 # 指定用到库
 find_package(Qt5 COMPONENTS Concurrent Core Network Widgets DBus LinguistTools REQUIRED)
@@ -36,7 +40,7 @@ qt5_add_translation(QM_FILES ${TS_FILES})
 add_custom_target(translations ALL DEPENDS ${QM_FILES})
 
 # 这里使用命令 add_library 来表示本项目要生成一个库文件目标，
-add_library(${PLUGIN_NAME} SHARED ${SRCS})
+add_library(${PLUGIN_NAME} SHARED ${SRCS} ${QRCS})
 
 # 设置目标要使用的 include 目录，即头文件目录
 # 变量 ${DtkWidget_INCLUDE_DIRS} 是在前面执行 find_package 命令时引入的
