chore: remove some desperate lib and dbusinterface
Log:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.13)
 
-project(deepin-deepinid-plugin)
+project(deepin-deepinid-plugin
+  VERSION 1.0.0
+  DESCRIPTION "Deepinid Deepin Control Center Plugin"
+  HOMEPAGE_URL "https://github.com/linuxdeepin/deepin-deepinid-plugin/"
+  LANGUAGES CXX
+)
 
-add_subdirectory("dcc-deepinid-plugin")
+add_subdirectory(dcc-deepinid-plugin)
 
